changed social sharing urls

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </div>
             <div class="social right-float-div">
                 <div class="single-link facebook">
-                    <a href="http://www.facebook.com/sharer/sharer.php?u=https://cdn.protograph.pykih.com/jaljagran-4/index.html" target="_blank"><img src="img/fb-white.png"></a>
+                    <a href="http://www.facebook.com/sharer/sharer.php?u=http://protograph.indianexpress.com/ie-mobbed/index.html" target="_blank"><img src="img/fb-white.png"></a>
                 </div>
                 <div class="single-link twitter">
-                    <a href="http://twitter.com/share?url=https://cdn.protograph.pykih.com/jaljagran-4/index.html" target="_blank"><img src="img/tw-white.png"></a>
+                    <a href="http://twitter.com/share?url=http://protograph.indianexpress.com/ie-mobbed/index.html" target="_blank"><img src="img/tw-white.png"></a>
                 </div>
                 <!-- <div class="single-link instagram">
                     <a href="#" ><img src="img/in-white.png"></a>
@@ -55,10 +55,10 @@
                 </div>
                 <div class="social bottom-pull-div">
                     <div class="single-link facebook">
-                        <a href="http://www.facebook.com/sharer/sharer.php?u=https://cdn.protograph.pykih.com/jaljagran-4/index.html" target="_blank" ><img src="img/fb-black.png"></a>
+                        <a href="http://www.facebook.com/sharer/sharer.php?u=http://protograph.indianexpress.com/ie-mobbed/index.html" target="_blank" ><img src="img/fb-black.png"></a>
                     </div>
                     <div class="single-link twitter">
-                        <a href="http://twitter.com/share?url=https://cdn.protograph.pykih.com/jaljagran-4/index.html" target="_blank" ><img src="img/tw-black.png"></a>
+                        <a href="http://twitter.com/share?url=http://protograph.indianexpress.com/ie-mobbed/index.html" target="_blank" ><img src="img/tw-black.png"></a>
                     </div>
                     <!-- <div class="single-link instagram">
                         <a href="#" ><img src="img/in-black.png"></a>
