adding filters in data grid page

--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>#जलजागरण</title>
+    <title>#mobbed</title>
     <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|Cabin:400,400i,500,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./proto-app-lib.min.css">
     <link rel="stylesheet" type="text/css" href="src/css/new/grid.css">
@@ -16,7 +16,7 @@
 <body>
     <div class="proto-grid-container data-page">
         <div class="proto-col col-16 navbar">
-            <div class="branding">#<strong>जलजागरण</strong></div>
+            <div class="branding">#<strong>mobbed</strong></div>
             <div class="nav-links">
                 <div class="single-link stories"><a href="./index.html">Stories</a></div>
                 <div class="single-link active-page data"><a href="#">Data</a></div>
@@ -38,7 +38,7 @@
         <div class="proto-col col-16 stick-to-top">
             <div class="fixed-cover-block">
                 <div class="page-title bottom-pull-div">
-                    डेटा
+                    Data
                 </div>
             </div>
             <div class="clearfix"></div>
